--- a/public_static/css/templateThree.css
+++ b/public_static/css/templateThree.css
@@ -15,15 +15,24 @@
     display: grid;
     grid-template-columns: repeat(2,1fr);
     padding-left: 1rem;
-    font-size:40px;
     font-family: Arial, Helvetica, sans-serif;
 
 }
+.weather-feelsLike{
+    font-size: 60px;
+    padding-left: 0.5rem;
+}
 .detail-weather-info{
     display: grid;
+    padding-left: 1rem;
     grid-template-columns: repeat(7,1fr);
+    border-top: solid rgb(255, 255, 255) 0.6rem;
+
+    border-radius: 1rem;
+    padding-top: 00.4rem;
 
 }
+
 .icons{
     padding-left: 1rem;
     display: grid;
@@ -33,10 +42,14 @@
 .title{
     display: grid;
     gap: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 .weather-data{
     display: grid;
     gap: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 .icons-2{
     display: grid;
@@ -46,8 +59,12 @@
 .title-2{
     display: grid;
     gap: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
 .weather-data-2{
     display: grid;
     gap: 0.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
