--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
                 <div class="night">Night</div>
             </div> 
             <div class="dayTemperature">
-                <div class="morning-temp"></div>
+                <div class="morning-temp">25<span>&#176;</span></div>
                 <div class="evening-temp">30<span>&#176;</span></div>
                 <div class="afternoon-temp">28<span>&#176;</span></div>
                 <div class="night-temp">19<span>&#176;</span></div>
@@ -56,44 +56,11 @@
             </div>
         </div>
 
-        <!-- <div class="sub-layout-two-vertical"> -->
-
-            <!-- <div class="sl-two-childOne-title">New York, NY, United States As of 04:37 EDT</div>
-            
-            <div class="brief-weather-info">
-                <div class="morningPart">
-                    <div class="dayParts">Morning</div>
-                    <div class="teperature">20</div>
-                    <img class="logo" src="" height="50px" width="50px">
-                    <div class="Precipitation">0</div>
-                </div> 
-                <div class="afternoonPart">
-                    <div class="dayParts">Afternoon</div>
-                    <div class="teperature">30</div>
-                    <img class="logo" src="" height="50px" width="50px">
-                    <div class="Precipitation">5</div>
-                </div> 
-                <div class="eveningPart">
-                    <div class="dayParts">Evening</div>
-                    <div class="teperature">28</div>
-                    <img class="logo" src="" height="50px" width="50px">
-                    <div class="Precipitation">0</div>
-                </div> 
-                <div class="nightPart">
-                    <div class="dayParts">Night</div>
-                    <div class="teperature">20</div>
-                    <img class="logo" src="" height="50px" width="50px">
-                    <div class="Precipitation">--</div>
-                </div> 
-            </div>
-            <div class="button">next hours</div>
-        </div> -->
-
         <div class="sub-layout-three">
             <div class="location-three">Weather Today In NewYork City, NY, United States</div>
             <div class="weather-info">
                 <div class="weather-feelsLike">21<span>&#176;</span></div>
-                <div class="unknown-info">up and down</div>
+                <div class="unknown-info"></div>
             </div>
             <div class="detail-weather-info">
                 <div class="icons">
