--- a/views/index.ejs
+++ b/views/index.ejs
@@ -109,6 +109,6 @@
         </div>
         
     </body>
-    <script src="js/index.js"></script>
+   <!-- <script src="js/index.js"></script> -->
 
 </html>
